# Tiny-compiler-in-500-lines-of-Rust

./: Cargo.toml  README.md  hello_world  output.ll
src/: main.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/resolver/: mod.rs
