[package]
name = "TinyRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["target-webassembly", "llvm12-0"] }